# slm-distillation

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: README.md  artifacts.yaml  artifacts_groq.yaml  artifacts_groq_llama_3_1_8b_instant.yaml  artifacts_groq_oss_120b.yaml  artifacts_groq_qwen3_32b.yaml  dpo.yaml  export.yaml  logit_distill.yaml  preference.yaml  preference_groq.yaml  preference_groq_llama_3_1_8b_instant.yaml  preference_groq_oss_120b.yaml  preference_groq_qwen3_32b.yaml  prompts.yaml  response_distill.yaml  response_distill_groq.yaml  response_distill_groq_llama_3_1_8b_instant.yaml  response_distill_groq_oss_120b.yaml  response_distill_groq_qwen3_32b.yaml  response_distill_openrouter.yaml  teachers.yaml
data/: README.md
distill/: README.md
docs/: README.md  logit_distillation.md
scripts/: README.md  build_dataset.py  build_preference_dataset.py  build_prompts.py  export_model.py  generate_teacher_responses.py  pack_artifacts.py  pull_artifacts.py  push_artifacts.py  report_token_counts.py  summarize_cost.py  train_dpo.py  train_logit_distill.py  unpack_artifacts.py  validate_teacher_responses.py  verify_artifacts.py
tests/: README.md  test_artifact_handoff.py  test_batched_hosted_runner.py  test_config.py  test_cost_summary_cli.py  test_dpo_config.py  test_env.py  test_export.py  test_formatters.py  test_generate_responses.py  test_groq_provider.py  test_hosted_controls.py  test_hosted_runner.py  test_logit_distill_config.py  test_openrouter_provider.py  test_preference_dataset.py  test_pricing.py  (+7 more)
(+45 files in other folders)
